--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -124,7 +124,11 @@
 [diff]
 
     # Detect copies as well as renames
-    renames = copies
+	renames = copies
+    tool = diffmerge
+
+[difftool "diffmerge"]
+        cmd = diffmerge \"$LOCAL\" \"$REMOTE\"
 
 [diff "bin"]
     # Use `hexdump` to diff binary files
@@ -139,6 +143,12 @@
 
     # Include summaries of merged commits in newly created merge commit messages
     log = true
+	tool = diffmerge
+
+[mergetool "diffmerge"]
+
+    cmd = "diffmerge --merge --result=\"$MERGED\" \"$LOCAL\" \"$(if test -f \"$BASE\"; then echo \"$BASE\"; else echo \"$LOCAL\"; fi)\" \"$REMOTE\""
+    trustExitCode = true
 
 [push]
 
